vote-manifest/results-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    role: result
spec:
  selector:
    role: result
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 30100
  type: ClusterIP
